# xrdp

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac
common/: Makefile.am  log.c  os_calls.c  pixman-region.h  trans.h  xrdp_client_info.h  xrdp_sockets.h
libxrdp/: libxrdp.c  libxrdpinc.h  xrdp_caps.c  xrdp_channel.c  xrdp_channel.h  xrdp_iso.c  xrdp_sec.c
scripts/: install_xrdp_build_dependencies_with_apt.sh
sesman/: Makefile.am  sesman.ini.in
vnc/: vnc.c  vnc.h
waitforx/: waitforx.c
xorgxrdp_helper/: Makefile.am  xorgxrdp_helper  xorgxrdp_helper.c  xorgxrdp_helper.h  xorgxrdp_helper_egl.c  xorgxrdp_helper_egl.h  xorgxrdp_helper_glx.c  xorgxrdp_helper_glx.h  xorgxrdp_helper_nvenc.c  xorgxrdp_helper_nvenc.h  xorgxrdp_helper_shaders.c  xorgxrdp_helper_x11.c  xorgxrdp_helper_x11.h  xorgxrdp_helper_yami.c  xorgxrdp_helper_yami.h
xorgxrdp_helper/encoder_headers/: nvEncodeAPI_11_0.h  yami_inf.h
xrdp/: Makefile.am  xrdp.h  xrdp_egfx.c  xrdp_egfx.h  xrdp_encoder.c  xrdp_encoder.h  xrdp_encoder_nvenc.c  xrdp_encoder_nvenc.h  xrdp_encoder_openh264.c  xrdp_encoder_openh264.h  xrdp_encoder_x264.c  xrdp_encoder_x264.h  xrdp_mm.c  xrdp_painter.c  xrdp_region.c  xrdp_types.h  xrdp_wm.c
xup/: xup.c  xup.h
